# cta_framework

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt
analytics/: performance.py  reporter.py  trade_stats.py  visualizer.py
config/: config_schema.py  default_config.yaml  example_btc_ma.yaml
core/: data_handler.py  engine.py  event_queue.py  events.py  execution_handler.py  portfolio.py  strategy.py
data/: cache.py  ccxt_handler.py  csv_handler.py  data_fetcher.py  schema.py
doc/: program.md
examples/: run_ma_crossover.py  run_supertrend.py  run_turtle.py
execution/: commission.py  simulated.py  slippage.py
results/: report.html
results/turtle/: report.html
strategies/: breakout.py  ma_crossover.py  mean_reversion.py  supertrend.py  turtle.py
tests/integration/: test_engine_full_loop.py
tests/unit/: test_csv_handler.py  test_event_queue.py  test_events.py  test_ma_crossover.py  test_portfolio.py
utils/: logger.py  timeframe.py
